# Pac-Man

./: .gitignore  CMakeLists.txt  README.md
assets/: board.xml  pacman.sprites
include/: constants.h  game.h  level.h  position.h  sprite-animation-structs.h  sprite-animation.h  sprite-handler.h  sprite-resources-structs.h  sprite.h
include/animations/: banana-dying-animation.h  bonus-animation.h
include/animations/banana/: banana-down-animation.h  banana-dying-animation.h  banana-left-animation.h  banana-right-animation.h  banana-up-animation.h
include/animations/pacman/: pacman-down-animation.h  pacman-dying-animation.h  pacman-left-animation.h  pacman-right-animation.h  pacman-up-animation.h
include/audio/: audio-handler.h
include/board/: board-case.h  board.h  text.h
include/entities/: banana.h  entity.h  fruit.h  ghost.h  pacman.h
include/entities/ghosts/: blinky.h  clyde.h  ghost.h  inky.h  pinky.h
include/game/: game-cycle.h  game-state.h  game.h  level.h  player.h
include/screens/: drawable.h  footer-screen.h  game-screen.h  header-screen.h  image.h  loading-screen.h  screen.h  text.h
include/screens/elements/: image.h  text.h
include/sprites/: sprite-animation.h  sprite-handler.h  sprite-resources-structs.h  sprite.h
include/utils/: clock.h  constants.h  position.h  random.h  shared_value.h  utils.h
src/: game.cpp  main.cpp  pacman-editor.cpp  pacman.cpp  sprite-animation.cpp  sprite-handler.cpp  sprite.cpp
src/animations/: banana-dying-animation.cpp  bonus-animation.cpp
src/animations/banana/: banana-dying-animation.cpp  banana-right-animation.cpp
src/animations/pacman/: pacman-down-animation.cpp  pacman-dying-animation.cpp  pacman-left-animation.cpp  pacman-right-animation.cpp  pacman-up-animation.cpp
src/audio/: audio-handler.cpp
src/board/: board-case.cpp  board.cpp
src/entities/: banana.cpp  entity.cpp  fruit.cpp  ghost.cpp  pacman.cpp
src/entities/ghosts/: blinky.cpp  clyde.cpp  ghost.cpp  inky.cpp  pinky.cpp
src/game/: game.cpp
src/screens/: footer-screen.cpp  game-screen.cpp  header-screen.cpp  image.cpp  loading-screen.cpp  screen.cpp  text.cpp
src/screens/elements/: image.cpp  text.cpp
src/sprites/: sprite-animation.cpp  sprite-handler.cpp  sprite.cpp
src/utils/: position.cpp
